--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
 		<noscript>
 			<strong>We're sorry but Werewolf doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 		</noscript>
-		<div id="app"></div>
+		<div id="app">
+			Welcome to Werewolf server
+			<a href="https://werewolfg.netlify.app">Click here to play game!</a>
+		</div>
 	</body>
 </html>
